# MyLang

./: cast.mylang  lazy.mylang  main.mylang  new.mylang  own.mylang  ptrs.mylang  shell.nix  syntax.txt  temp.mylang
mylang-compiler/: .gitignore  Cargo.toml
mylang-compiler/example/: Code.ast  Code.ll  Code.mylang  Code.tokens
mylang-compiler/src/: ast.rs  codegenerator.rs  main.rs  parser.rs  tokenizer.rs  typechecker.rs
mylang-compiler/std/: array.mylang  context.mylang  httpserver.mylang  prelude.mylang
mylang-compiler/std/cell/: cell.mylang
mylang-compiler/std/collections/: DynArr.mylang
mylang-compiler/std/core/: ints.mylang  math.mylang  opt.mylang  owned.mylang  primitives.mylang  result.mylang  unique.mylang
mylang-compiler/std/core/op/: deref.mylang
mylang-compiler/std/examples/: binary_tree.mylang  box.mylang  custom_allocator.mylang  linked_list.mylang  parse_integers.mylang  rectangle.mylang  stack.mylang  store_email.mylang
mylang-compiler/std/guides/: enums_and_unions.md  generics.mylang  opaque.mylang  reference_types.md  traits.md
mylang-compiler/std/rc/: rc.mylang
